--- a/src/main/dart/pubspec.yaml
+++ b/src/main/dart/pubspec.yaml
@@ -3,10 +3,14 @@ description: A sample web application
 
 environment:
   sdk: '>=1.2.0 <2.0.0'
+
 dependencies:
-  polymer: '>=0.12.0 <0.13.0'
+  polymer: '>=0.15.0 <0.20.0'
+  core_elements: ">=0.3.0+1 <0.4.0"
+  
 dev_dependencies:
   unittest: '>=0.10.0 <0.11.0'
+
 transformers:
 - polymer:
     entry_points:
