dart refactoring: move http api communication to separate controller class

--- a/src/main/dart/pubspec.yaml
+++ b/src/main/dart/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   core_elements: ">=0.3.0+1 <0.4.0"
   paper_elements: any
   http: any
+  json_object: any
   
 dev_dependencies:
   unittest: '>=0.10.0 <0.11.0'
