first succesfull basic download job executed

--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ dependencies {
 //dart tasks
 task pubBuild(type:Exec) {
 	workingDir 'src/main/dart'
-	commandLine 'pub','build','web','--output','../../../src/main/resources/static'
+	commandLine 'pub','build','web','--output','../../../src/main/resources/static','--mode','debug'
 }
 
 task pubGet(type:Exec) {
