--- a/src/main/dart/pubspec.yaml
+++ b/src/main/dart/pubspec.yaml
@@ -1,19 +1,15 @@
 name: getdown_client
 description: A sample web application
-
 environment:
   sdk: '>=1.2.0 <2.0.0'
-
 dependencies:
-  polymer: '>=0.15.0 <0.20.0'
-  core_elements: ">=0.3.0+1 <0.4.0"
-  paper_elements: any
+  core_elements: '>=0.3.0+1'
   http: any
   json_object: any
-  
+  paper_elements: any
+  polymer: '>=0.15.0'
 dev_dependencies:
-  unittest: '>=0.10.0 <0.11.0'
-
+  unittest: any
 transformers:
 - polymer:
     entry_points:
