progress output formatting

--- a/src/test/java/test.properties
+++ b/src/test/java/test.properties
@@ -1,1 +1,2 @@
-getdown.testjob.url = https://github.com/lumue/getdown/archive/master.zip
+getdown.testjob.myself.url = https://github.com/lumue/getdown/archive/master.zip
+getdown.testjob.eclipse.url = http://artfiles.org/eclipse.org//technology/epp/downloads/release/luna/SR1/eclipse-java-luna-SR1-linux-gtk-x86_64.tar.gz
