--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-logging")
 	
 	compile 'com.google.http-client:google-http-client:1.19.0'
+	compile 'org.jsoup:jsoup:1.7.2'
+
 	
 	testCompile("org.springframework.boot:spring-boot-starter-test")
 	
