integrate content location resolving with download process add more debug logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 getdown.downloadPath = /home/lm/getdown
+
+#logging
+logging.level.io.github.lumue.getdown=DEBUG
 logging.level.org.springframework=WARN
+logging.level.org.apache.http=WARN
