initialize environment on startup

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ dependencies {
 	
 	compile 'com.google.http-client:google-http-client:1.19.0'
 	compile 'org.jsoup:jsoup:1.7.2'
+	compile 'javax.media:jmf:2.1.1e'
+
 
 	
 	testCompile("org.springframework.boot:spring-boot-starter-test")
