--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-getdown.downloadPath = /home/lm/getdown
+getdown.path.home=${HOME}/.getdown
+getdown.path.config=${getdown.path.home}/config 
+getdown.path.download =${HOME}/Downloads
+getdown.path.log=${getdown.path.home}/log
+server.port=8001
 
 #logging
+logging.file=${getdown.path.log}/getdown.log
 logging.level.io.github.lumue.getdown=DEBUG
 logging.level.org.springframework=WARN
 logging.level.org.apache.http=WARN
