--- a/getdown-application/.gitignore
+++ b/getdown-application/.gitignore
@@ -1,12 +1,12 @@
-/build/
-/.settings/
-/.classpath
-/.project
-/.direcotry
-/.gradle/
-/bin/
-/dartbuild/
-/src/main/dart/packages/
-/src/main/dart/web/packages/
-/src/main/dart/.pub
-/src/main/resources/static/web
+build/
+.settings/
+.classpath
+.project
+.directory
+.gradle/
+bin/
+dartbuild/
+src/main/dart/packages/
+src/main/dart/web/packages/
+src/main/dart/.pub
+src/main/resources/static/web
