--- a/build.gradle
+++ b/build.gradle
@@ -1,73 +1,30 @@
-buildscript {
+rootProject.group = 'io.github.lumue.getdown'
+version = '0.1.0-SNAPSHOT'
+
+
+
+allprojects {
+
+	ext {
+		jdk_version='1.8'
+		spring_version='4.1.1.RELEASE'
+	}
+
 	repositories {
-		maven { url "http://repo.spring.io/libs-release" }
-		mavenLocal()
 		mavenCentral()
+		mavenLocal()
+		maven { url "http://repo.spring.io/libs-release" }
 	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:1.1.5.RELEASE")
+
+
+	apply plugin: 'eclipse'
+	apply plugin: 'java'
+	eclipse {
+		project { 	natures 'org.springsource.ide.eclipse.gradle.core.nature' }
+		classpath {	containers 'org.springsource.ide.eclipse.gradle.classpathcontainer'
+				downloadSources = true;}
 	}
 }
 
 
-//plugins
-apply plugin: 'java'
-apply plugin: 'application'
-apply plugin: 'eclipse'
-apply plugin: 'spring-boot'
-
-
-//java configuration
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
-
-
-//eclipse configuration
-eclipse.project {
-	natures 'org.springsource.ide.eclipse.gradle.core.nature'
-}
-eclipse.classpath {
-	containers 'org.springsource.ide.eclipse.gradle.classpathcontainer'
-	downloadSources = true;
-}
-
-//project properties
-version = '0.1'
-mainClassName = 'io.github.lumue.getdown.application.Application'
-
-
-//dependencies
-repositories {
-	mavenLocal()
-    mavenCentral()
-    maven { url "http://repo.spring.io/libs-release" }
-}
-dependencies {
-	
-	compile("org.springframework.boot:spring-boot-starter-web")
-	compile("org.springframework.boot:spring-boot-starter-logging")
-	compile("org.springframework.boot:spring-boot-starter-actuator")
-	
-	compile 'com.google.http-client:google-http-client:1.19.0'
-	compile 'org.jsoup:jsoup:1.7.2'
-	compile 'javax.media:jmf:2.1.1e'
-
-
-	
-	testCompile("org.springframework.boot:spring-boot-starter-test")
-	
-	testCompile 'junit:junit:4.11'
-}
-
-
-//dart tasks
-task pubBuild(type:Exec) {
-	workingDir 'src/main/dart'
-	commandLine 'pub','build','web','--output','../../../src/main/resources/static','--mode','debug'
-}
-
-task pubGet(type:Exec) {
-	workingDir 'src/main/dart'
-	commandLine 'pub','get'
-}
 
