--- a/getdown-common/build.gradle
+++ b/getdown-common/build.gradle
@@ -2,8 +2,12 @@ sourceCompatibility = jdk_version
 targetCompatibility = jdk_version
 
 dependencies {
-    	compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    	testCompile group: 'junit', name: 'junit', version: '4.+'
+	
+	compile 'com.google.http-client:google-http-client:1.19.0'
+	compile 'javax.media:jmf:2.1.1e'
+	compile 'com.fasterxml.jackson.core:jackson-core:2.3.3'
+	compile 'com.fasterxml.jackson.core:jackson-databind:2.3.3'
+	
 }
 
 test {
