--- a/getdown-hosts-sc/build.gradle
+++ b/getdown-hosts-sc/build.gradle
@@ -2,8 +2,12 @@ sourceCompatibility = jdk_version
 targetCompatibility = jdk_version
 
 dependencies {
-    	compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    	testCompile group: 'junit', name: 'junit', version: '4.+'
+		
+		compile project(':getdown-common')
+
+		compile 'javax.inject:javax.inject:1'
+		compile 'com.google.http-client:google-http-client:1.19.0'
+		compile 'org.jsoup:jsoup:1.7.2'
 }
 
 test {
