--- a/getdown-hosts-xh/build.gradle
+++ b/getdown-hosts-xh/build.gradle
@@ -2,8 +2,9 @@ sourceCompatibility = jdk_version
 targetCompatibility = jdk_version
 
 dependencies {
-    	compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    	testCompile group: 'junit', name: 'junit', version: '4.+'
+    	compile project(':getdown-common')
+
+		compile 'javax.inject:javax.inject:1'
 }
 
 test {
