add module for persistent job repo with hazelcast

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'getdown'
 include (			'getdown-application',
 				'getdown-common',
+				'getdown-jobrepo-hazel',
 				'getdown-hosts-sc',
 				'getdown-hosts-xh')
