added hazelcast job repo

--- a/getdown-application/build.gradle
+++ b/getdown-application/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	compile project(':getdown-common')
 	compile project(':getdown-hosts-sc')
 	compile project(':getdown-hosts-xh')
+	compile project(':getdown-jobrepo-hazel')
 	
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.springframework.boot:spring-boot-starter-logging")
