--- a/getdown-jobrepo-hazel/build.gradle
+++ b/getdown-jobrepo-hazel/build.gradle
@@ -5,5 +5,6 @@ dependencies {
     	compile project(':getdown-common')
 
 		compile 'javax.inject:javax.inject:1'
+		compile 'com.hazelcast:hazelcast:3.4'
 }
 
