--- a/getdown-application/src/main/resources/application.properties
+++ b/getdown-application/src/main/resources/application.properties
@@ -2,6 +2,7 @@ getdown.path.home=${HOME}/.getdown
 getdown.path.config=${getdown.path.home}/config
 getdown.path.download =${HOME}/Downloads
 getdown.path.log=${getdown.path.home}/log
+getdown.path.repository=${getdown.path.home}/repository
 server.port=8001
 
 #logging
