--- a/getdown-application/.gitignore
+++ b/getdown-application/.gitignore
@@ -8,6 +8,7 @@ bin/
 dartbuild/
 src/main/dart/packages/
 src/main/dart/web/packages/
+src/main/dart/web/icons/packages
 src/main/dart/.pub
 src/main/resources/static/web
 .springBeans
