--- a/getdown-application/src/main/resources/application.properties
+++ b/getdown-application/src/main/resources/application.properties
@@ -8,5 +8,5 @@ server.port=8001
 #logging
 logging.file=${getdown.path.log}/getdown.log
 logging.level.io.github.lumue.getdown=DEBUG
-logging.level.org.springframework=WARN
+logging.level.org.springframework=DEBUG
 logging.level.org.apache.http=WARN
