--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import java.util.concurrent.CompletableFuture.ApplyToEither;
+
 rootProject.group = 'io.github.lumue.getdown'
 version = '0.1.0-SNAPSHOT'
 
@@ -18,17 +20,19 @@ allprojects {
 
 
 	apply plugin: 'eclipse'
-	apply plugin: 'java'
 	eclipse {
 		project { 	natures 'org.springsource.ide.eclipse.gradle.core.nature' }
 		classpath {	containers 'org.springsource.ide.eclipse.gradle.classpathcontainer'
 				downloadSources = true;}
 	}
 	
+	apply plugin:'java'
+	//java configuration
+	sourceCompatibility = jdk_version
+	targetCompatibility = jdk_version
+	
 	dependencies{
-		
 		compile 'org.slf4j:slf4j-api:1.7.7'
-		
 		testCompile 'junit:junit:4.11'
 	}
 }
