--- a/getdown-core/build.gradle
+++ b/getdown-core/build.gradle
@@ -2,8 +2,10 @@
 
 dependencies {
 	
+	compile 'org.projectreactor:reactor-core:1.1.5.RELEASE'
+	
 	compile 'com.google.http-client:google-http-client:1.19.0'
-	compile 'javax.media:jmf:2.1.1e'
+	
 	compile 'com.fasterxml.jackson.core:jackson-core:2.3.3'
 	compile 'com.fasterxml.jackson.core:jackson-databind:2.3.3'
 	
