job state changes are  broadcast via websocket

--- a/getdown-webconsole/src/main/resources/static/webconsole/application_components/bower.json
+++ b/getdown-webconsole/src/main/resources/static/webconsole/application_components/bower.json
@@ -14,5 +14,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "sockjs": "~0.3.4",
+    "stomp-websocket": "~2.3.4"
+  }
 }
