download state is broadcast and received over websocket

--- a/getdown-app-springboot/src/main/resources/application.properties
+++ b/getdown-app-springboot/src/main/resources/application.properties
@@ -3,7 +3,11 @@ getdown.path.config=${getdown.path.home}/config
 getdown.path.download =${HOME}/Downloads
 getdown.path.log=${getdown.path.home}/log
 getdown.path.repository=${getdown.path.home}/repository
+
+getdown.websocket.broadcastinterval.downloads=500
+
 server.port=8001
+tomcat.version=8.0.3
 
 #logging
 logging.file=${getdown.path.log}/getdown.log
