--- a/getdown-webconsole/src/main/resources/static/webconsole/application_components/bower.json
+++ b/getdown-webconsole/src/main/resources/static/webconsole/application_components/bower.json
@@ -17,6 +17,9 @@
   ],
   "dependencies": {
     "sockjs": "~0.3.4",
-    "stomp-websocket": "~2.3.4"
+    "stomp-websocket": "~2.3.4",
+    "polymer": "~0.5.5",
+    "core-elements": "Polymer/core-elements#~0.5.5",
+    "paper-elements": "Polymer/paper-elements#~0.5.5"
   }
 }
