--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,9 @@ allprojects {
 	targetCompatibility = jdk_version
 	
 	dependencies{
-		compile 'org.slf4j:slf4j-api:1.7.7'
+		compile 'org.slf4j:slf4j-api:1.7.10'
 		testCompile 'junit:junit:4.11'
+		testCompile
 	}
 	
 	apply plugin: 'findbugs'
