--- a/getdown-browserext-chrome/src/main/resources/getdown/manifest.json
+++ b/getdown-browserext-chrome/src/main/resources/getdown/manifest.json
@@ -7,4 +7,11 @@
  "background": {"persistent": false, "scripts": ["background.js"]},
  "default_locale": "en",
  "permissions": ["contextMenus", "downloads", "downloads.open","http://localhost:8001/"]
- }
+ 
+ "options_ui": {
+    // Required.
+    "page": "options.html",
+    // Recommended.
+    "chrome_style": true,
+  }
+}
