run smoother in docker container

--- a/getdown-app-springboot/src/main/docker/Dockerfile
+++ b/getdown-app-springboot/src/main/docker/Dockerfile
@@ -3,4 +3,5 @@ MAINTAINER lm "lm@combase.de"
 
 ADD getdown-app-springboot.jar app.jar
 RUN touch /app.jar
+CMD mkdir /getdown
 ENTRYPOINT ["java","-jar","/app.jar"]
