--- a/getdown-app-springboot/src/main/resources/application.properties
+++ b/getdown-app-springboot/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-getdown.path.home=${HOME}/.getdown
+getdown.path.home=/getdown
 getdown.path.config=${getdown.path.home}/config
-getdown.path.download =${HOME}/Downloads
+getdown.path.download =${getdown.path.home}/Downloads
 getdown.path.log=${getdown.path.home}/log
 getdown.path.repository=${getdown.path.home}/repository
 
