--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ allprojects {
 	dependencies{
 		compile 'org.slf4j:slf4j-api:1.7.10'
 		testCompile 'junit:junit:4.11'
+		testCompile 'org.slf4j:slf4j-log4j12:1.7.10'
 	}
 	
 	apply plugin: 'findbugs'
