--- a/getdown-hosts-common/build.gradle
+++ b/getdown-hosts-common/build.gradle
@@ -5,7 +5,7 @@ dependencies {
 		compile project(':getdown-core')
 
 		compile 'javax.inject:javax.inject:1'
-		compile 'com.google.http-client:google-http-client:1.19.0'
+		compile 'org.apache.httpcomponents:httpclient:4.5'
 		compile 'org.jsoup:jsoup:1.7.2'
 }
 
