--- a/getdown-app-springboot/src/main/docker/Dockerfile
+++ b/getdown-app-springboot/src/main/docker/Dockerfile
@@ -4,4 +4,4 @@ MAINTAINER lm "lm@combase.de"
 ADD getdown-app-springboot.jar app.jar
 RUN touch /app.jar
 CMD mkdir /getdown
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-Dgetdown.path.home=/getdown","-jar","/app.jar"]
