expose download path as docker volume

--- a/getdown-app-springboot/src/main/docker/Dockerfile
+++ b/getdown-app-springboot/src/main/docker/Dockerfile
@@ -3,5 +3,5 @@ MAINTAINER lm "lm@combase.de"
 
 ADD getdown-app-springboot.jar app.jar
 RUN touch /app.jar
-CMD mkdir /getdown
-ENTRYPOINT ["java","-Dgetdown.path.home=/getdown","-jar","/app.jar"]
+CMD mkdir /getdown && mkdir /downloads
+ENTRYPOINT ["java","-Dgetdown.path.home=/getdown", "-Dgetdown.path.download=/downloads","-jar","/app.jar"]
