--- a/getdown-webconsole/src/main/resources/static/webapp/bower.json
+++ b/getdown-webconsole/src/main/resources/static/webapp/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "getdown-webconsole",
+  "name": "getdown-webapp",
   "version": "0.1",
   "homepage": "https://github.com/lumue/getdown",
   "authors": [
