--- a/getdown-webconsole/src/main/web/bower.json
+++ b/getdown-webconsole/src/main/web/bower.json
@@ -19,7 +19,8 @@
     "paper-progress": "PolymerElements/paper-progress#^1.0.0",
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.0",
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.0",
-    "iron-pages": "PolymerElements/iron-pages#^1.0.0"
+    "iron-pages": "PolymerElements/iron-pages#^1.0.0",
+    "vaadin-components": "0.3.0-beta6"
   },
   "devDependencies": {
     "web-component-tester": "*",
