ignore idea files

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ allprojects {
 				downloadSources = true;}
 	}
 	
+	apply plugin: 'idea'
 	apply plugin:'java'
 	//java configuration
 	sourceCompatibility = jdk_version
