--- a/getdown-webconsole/src/main/web/bower.json
+++ b/getdown-webconsole/src/main/web/bower.json
@@ -8,18 +8,20 @@
   "main": "index.html",
   "private": true,
   "dependencies": {
+    "sockjs": "~0.3.4",
+    "stomp-websocket": "~2.3.4",
     "page": "visionmedia/page.js#~1.6.3",
-    "iron-icon": "PolymerElements/iron-icon#^1.0.0",
-    "iron-list": "PolymerElements/iron-list#^1.0.0",
-    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.0",
-    "paper-fab": "PolymerElements/paper-fab#^1.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0",
-    "paper-material": "PolymerElements/paper-material#^1.0.0",
-    "paper-menu": "PolymerElements/paper-menu#^1.0.0",
-    "paper-progress": "PolymerElements/paper-progress#^1.0.0",
-    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.0",
-    "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.0",
-    "iron-pages": "PolymerElements/iron-pages#^1.0.0",
+    "iron-icon": "PolymerElements/iron-icon#^1.1.1",
+    "iron-list": "PolymerElements/iron-list#^1.1.0",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.3",
+    "paper-fab": "PolymerElements/paper-fab#^1.0.3",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.3",
+    "paper-material": "PolymerElements/paper-material#^1.1.1",
+    "paper-menu": "PolymerElements/paper-menu#^1.1.0",
+    "paper-progress": "PolymerElements/paper-progress#^1.0.2",
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.8",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.1",
+    "iron-pages": "PolymerElements/iron-pages#^1.0.3",
     "vaadin-components": "0.3.0-beta6"
   },
   "devDependencies": {
