add exposed ports and mountable volumes to dockerfile

--- a/getdown-app-springboot/src/main/docker/Dockerfile
+++ b/getdown-app-springboot/src/main/docker/Dockerfile
@@ -4,4 +4,10 @@ MAINTAINER lm "lm@combase.de"
 ADD getdown-app-springboot.jar app.jar
 RUN touch /app.jar
 CMD mkdir /getdown && mkdir /downloads
+
+EXPOSE 8001
+
+VOLUME ["/getdown"]
+VOLUME ["/downloads"]
+
 ENTRYPOINT ["java","-Dgetdown.path.home=/getdown", "-Dgetdown.path.download=/downloads","-jar","/app.jar"]
