--- a/getdown-core/build.gradle
+++ b/getdown-core/build.gradle
@@ -1,12 +1,13 @@
 
 
 dependencies {
-	
+
+	compile 'com.github.lumue:ydlwrapper:master-SNAPSHOT'
+
 	compile "io.projectreactor:reactor-core:$reactor_version"
 	
 	compile 'com.google.http-client:google-http-client:1.19.0'
 	
 	compile 'com.fasterxml.jackson.core:jackson-core:2.3.3'
 	compile 'com.fasterxml.jackson.core:jackson-databind:2.3.3'
-	
 }
