--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ allprojects {
 
 	ext {
 		jdk_version='1.8'
-		spring_boot_version='1.2.2.RELEASE'
+		spring_boot_version='1.3.3.RELEASE'
 		findbugs_version = '3.0.1'
-		reactor_version = '2.0.0.RC1'
+		reactor_version = '2.0.7.RELEASE'
 	}
 
 	repositories {
