--- a/getdown-app-springboot/build.gradle
+++ b/getdown-app-springboot/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 	
 	compile("org.springframework:spring-messaging")
 	compile("io.projectreactor.spring:reactor-spring-context:$reactor_version")
+	compile "io.projectreactor:reactor-core:$reactor_version"
+	compile "io.projectreactor:reactor-bus:$reactor_version"
+
 	testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
