--- a/getdown-webconsole/src/main/web/app/bower.json
+++ b/getdown-webconsole/src/main/web/app/bower.json
@@ -11,12 +11,12 @@
     "sockjs": "~0.3.4",
     "stomp-websocket": "~2.3.4",
     "page": "visionmedia/page.js#~1.6.3",
-    "iron-icon": "PolymerElements/iron-icon#^1.1.1",
+    "iron-icon": "PolymerElements/iron-icon#^1.0.8",
     "iron-list": "PolymerElements/iron-list#^1.1.0",
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.3",
     "paper-fab": "PolymerElements/paper-fab#^1.0.3",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.3",
-    "paper-material": "PolymerElements/paper-material#^1.1.1",
+    "paper-material": "PolymerElements/paper-material#^1.0.6",
     "paper-menu": "PolymerElements/paper-menu#^1.1.0",
     "paper-progress": "PolymerElements/paper-progress#^1.0.2",
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.8",
@@ -27,5 +27,8 @@
   "devDependencies": {
     "web-component-tester": "*",
     "test-fixture": "PolymerElements/test-fixture#^1.0.0"
+  },
+  "resolutions": {
+    "polymer": "^1.2.4"
   }
 }
