--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,6 @@ rootProject.name = 'getdown'
 include (
 	  'getdown-app-springboot',
 	  'getdown-core',
-	  'getdown-webconsole'
+	  'getdown-webconsole',
+	  'getdown-console'
 )
