--- a/getdown-core/build.gradle
+++ b/getdown-core/build.gradle
@@ -1,4 +1,8 @@
 
+apply plugin:'java'
+//java configuration
+sourceCompatibility = jdk_version
+targetCompatibility = jdk_version
 
 
 dependencies {
@@ -12,6 +16,11 @@ dependencies {
 	
 	compile 'com.fasterxml.jackson.core:jackson-core:2.3.3'
 	compile 'com.fasterxml.jackson.core:jackson-databind:2.3.3'
+	compile 'org.slf4j:slf4j-api:1.7.10'
+
+	testCompile 'junit:junit:4.11'
+	testCompile 'org.slf4j:slf4j-log4j12:1.7.10'
+}
 
 	compile 'net.openhft:chronicle-map:3.8.0'
 
