--- a/getdown-app-springboot/build.gradle
+++ b/getdown-app-springboot/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 	compile 'org.slf4j:slf4j-api:1.7.10'
 
 	testCompile 'junit:junit:4.11'
-	testCompile 'org.slf4j:slf4j-log4j12:1.7.10'
+	testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
 }
 
 
