build polymer 1.0 webclient into spring-boot-app

--- a/getdown-app-springboot/build.gradle
+++ b/getdown-app-springboot/build.gradle
@@ -30,7 +30,7 @@ repositories {
 
 dependencies {
 	compile project(':getdown-core')	
-	compile project(':getdown-webconsole')
+	compile project(':getdown-console')
 
 	
 	compile("org.springframework.boot:spring-boot-starter-web")
