--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ allprojects {
 		spring_boot_version='1.3.5.RELEASE'
 		findbugs_version = '3.0.1'
 		reactor_version = '2.0.7.RELEASE'
+		logback_version = '1.1.7'
 	}
 
 	repositories {
@@ -19,7 +20,7 @@ allprojects {
 
 	
 	apply plugin: 'idea'
-	
+
 	apply plugin: 'findbugs'
 	
 	findbugs {
