--- a/getdown-webconsole/build.gradle
+++ b/getdown-webconsole/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
 	repositories {
+		mavenCentral()
 		maven {
 			url "https://plugins.gradle.org/m2/"
 		}
@@ -15,15 +16,6 @@ sourceCompatibility = jdk_version
 targetCompatibility = jdk_version
 apply plugin: 'eclipse-wtp'
 
-eclipse {
-	project {
-		natures 'org.eclipse.wst.jsdt.core.jsNature'
-		natures 'org.eclipse.wst.common.project.facet.core.nature'
-		
-		buildCommand 'org.eclipse.wst.jsdt.core.javascriptValidator'
-		buildCommand 'org.eclipse.wst.common.project.facet.core.builder'
-	}
-}
 
 apply plugin: 'com.moowork.gulp'
 
