--- a/getdown-console/bower.json
+++ b/getdown-console/bower.json
@@ -8,7 +8,9 @@
     "paper-elements": "PolymerElements/paper-elements#^1.0.1",
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
     "polymer": "Polymer/polymer#^1.2.0",
-    "byutv-jsonp": "^1.2.0"
+    "byutv-jsonp": "^1.2.0",
+    "sockjs": "~0.3.4",
+    "stomp-websocket": "~2.3.4"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
