--- a/getdown-app-springboot/build.gradle
+++ b/getdown-app-springboot/build.gradle
@@ -17,11 +17,13 @@ targetCompatibility = jdk_version
 
 apply plugin: 'application'
 apply plugin: 'spring-boot'
+ext['tomcat.version'] = '8.5.2'
 apply plugin: 'docker'
 
 group = 'lumue'
 
 mainClassName = 'io.github.lumue.getdown.app.springboot.application.Application'
+
 
 repositories {
 	maven { url 'http://repo.spring.io/libs-release' }
