--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-rootProject.group = 'io.github.lumue.getdown'
-version = 'stable-SNAPSHOT'
+rootProject.group = io.github.lumue.getdown
+version = stable-SNAPSHOT
 
 
