--- a/getdown-webconsole/bower.json
+++ b/getdown-webconsole/bower.json
@@ -11,7 +11,8 @@
     "byutv-jsonp": "^1.2.0",
     "sockjs": "~0.3.4",
     "stomp-websocket": "~2.3.4",
-    "lodash": "^4.13.1"
+    "lodash": "^4.13.1",
+    "stomp-client": "lumue/polymer-stomp-client#^0.0.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
