build with travis

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,16 @@ Downloads/
 log/
 *.iml
 .idea
-Würde src/main/java/ löschen
-Würde src/test/ löschen
 .gradle
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+gradle/wrapper/gradle-wrapper.properties
