--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,6 @@ allprojects {
 
 	
 	apply plugin: 'idea'
-
 	apply plugin: 'findbugs'
 	
 	findbugs {
@@ -33,6 +32,7 @@ allprojects {
 		toolVersion = findbugs_version
 	}
 
+	apply plugin: 'java'
 	configurations.all {
 		resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 	}
