--- a/getdown-webconsole/bower.json
+++ b/getdown-webconsole/bower.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "web-component-tester": "^4.0.0"
   },
-  "ignore": []
+  "ignore": [],
+  "resolutions": {
+    "lodash": "^4.13.1"
+  }
 }
