bind bower install to processResources

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 
+before_script:
+  - npm install -g bower
+
 script:
   - gradle buildDocker
 
