build docker with exec task

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - npm install -g bower
 
 script:
-  - travis_wait 30 gradle buildDocker
+  - gradle buildDocker
 
 after_success:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
