--- a/getdown-webconsole/build.gradle
+++ b/getdown-webconsole/build.gradle
@@ -4,7 +4,6 @@ buildscript {
 	    maven{url "https://plugins.gradle.org/m2/"}
     }
     dependencies {
-    	classpath 'se.transmode.gradle:gradle-docker:1.2'
 	    classpath 'com.moowork.gradle:gradle-gulp-plugin:0.10'
     }
 }
@@ -14,7 +13,6 @@ buildscript {
 
 
 apply plugin: 'idea'
-apply plugin: 'docker'
 apply plugin: 'java'
 
 group = 'lumue'
@@ -23,19 +21,26 @@ apply plugin: 'com.moowork.gulp'
 
 processResources.dependsOn 'bowerInstall'
 
-task buildDocker(type: Docker) {
 
-	push = true
-	applicationName = "getdown-webconsole"
 
-	dockerfile = file('Dockerfile')
+task buildDocker(type: Exec, dependsOn: build) {
 
-  doFirst {
-    copy {
-      from "src/main/resources/static/console/app"
+	def stageDir=file(project.buildDir.absolutePath+'/docker')
+
+	workingDir stageDir
+	commandLine 'docker', 'build', '-t','lumue/getdown-webconsole','.'
+
+	doFirst {
+		copy {
+      from 'src/main/resources/static/webconsole'
       into 'build/docker/app'
     }
-  }
+		copy {
+			from file('src/main/docker/Dockerfile')
+			into stageDir
+		}
+	}
+
 }
 
 // Install the bower components for front-end library management
