--- a/getdown-webconsole/bower.json
+++ b/getdown-webconsole/bower.json
@@ -2,23 +2,23 @@
   "name": "getdown-console",
   "private": true,
   "dependencies": {
+    "byutv-jsonp": "^1.2.0",
     "iron-elements": "PolymerElements/iron-elements#^1.0.0",
+    "lodash": "~4.13.1",
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
     "page": "visionmedia/page.js#~1.6.4",
     "paper-elements": "PolymerElements/paper-elements#^1.0.1",
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
     "polymer": "Polymer/polymer#^1.2.0",
-    "byutv-jsonp": "^1.2.0",
     "sockjs": "~0.3.4",
-    "stomp-websocket": "~2.3.4",
-    "lodash": "^4.13.1",
-    "stomp-client": "lumue/polymer-stomp-client#^0.0.1"
+    "stomp-client": "lumue/polymer-stomp-client#^0.0.1",
+    "stomp-websocket": "~2.3.4"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
   },
   "ignore": [],
   "resolutions": {
-    "lodash": "^4.13.1"
+    "lodash": "~4.13.1"
   }
 }
