--- a/getdown-webconsole/build.gradle
+++ b/getdown-webconsole/build.gradle
@@ -3,20 +3,10 @@ buildscript {
         mavenCentral()
 	    maven{url "https://plugins.gradle.org/m2/"}
     }
-    dependencies {
-	    classpath 'com.moowork.gradle:gradle-gulp-plugin:0.10'
-    }
 }
-
-
-
-
-
 apply plugin: 'idea'
 apply plugin: 'java'
 
-
-apply plugin: 'com.moowork.gulp'
 
 processResources.dependsOn 'bowerInstall'
 
@@ -26,3 +16,6 @@ task bowerInstall( type: Exec){
 	commandLine "bower", 'install'
 }
 
+clean.doFirst {
+	delete 'src/main/resources/static/webconsole/bower_components'
+}
