--- a/getdown-core/build.gradle
+++ b/getdown-core/build.gradle
@@ -17,6 +17,9 @@ dependencies {
 	compile 'org.slf4j:slf4j-api:1.7.10'
 
 
+	compile 'org.springframework.data:spring-data-redis:1.6.4.RELEASE'
+
+
 
 	testCompile 'junit:junit:4.11'
 	testCompile 'org.slf4j:slf4j-log4j12:1.7.10'
