--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,21 @@ allprojects {
 
 	ext {
 		jdk_version='1.8'
-		spring_boot_version='1.3.5.RELEASE'
+		spring_boot_version='1.4.0.RC1'
 		findbugs_version = '3.0.1'
-		reactor_version = '2.0.7.RELEASE'
+		reactor_version = '2.5.0.BUILD-SNAPSHOT'
 		logback_version = '1.1.7'
 	}
 
 	repositories {
 		mavenCentral()
 		maven { url "https://jitpack.io" }
+		maven { url 'http://repo.spring.io/libs-snapshot' }
+		maven { url 'http://repo.spring.io/milestone' }
+		maven { url 'http://repo.spring.io/snapshot' }
+		maven {
+			url 'https://repo.spring.io/libs-milestone'
+		}
 	}
 
 	
