--- a/getdown-app-springboot/src/main/resources/application.properties
+++ b/getdown-app-springboot/src/main/resources/application.properties
@@ -4,6 +4,9 @@ getdown.path.download =${getdown.path.home}/Downloads
 getdown.path.log=${getdown.path.home}/log
 getdown.path.repository=${getdown.path.home}/repository
 
+getdown.jobrunner.threads.prepare=20
+getdown.jobrunner.threads.download=5
+
 getdown.websocket.broadcastinterval.downloads=500
 
 server.port=8001
