move platform build in separate image

--- a/getdown-app-springboot/src/main/docker/Dockerfile
+++ b/getdown-app-springboot/src/main/docker/Dockerfile
@@ -1,13 +1,5 @@
-FROM lumue/debjdk
+FROM lumue/jdkydl
 MAINTAINER lm "mueller.lutz@gmail.com"
-
-RUN apt-get -y update && \
-apt-get -y install ffmpeg && \
-apt-get -y install rtmpdump && \
-apt-get -y install aria2 && \
-apt-get -y install youtube-dl && \
-ln -s `which youtube-dl` /usr/local/bin/youtube-dl && \
-rm -rf /var/cache/*
 
 ADD getdown-app-springboot-master-SNAPSHOT.jar /app.jar
 CMD mkdir /getdown && mkdir /downloads
