--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,5 @@ script:
 
 after_success:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - docker tag -f lumue/getdown lumue/getdown:latest
   - docker push lumue/getdown
