--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
 
 after_success:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  - docker tag -f lumue/getdown lumue/getdown:latest
-  - docker push lumue/getdown
+  - docker tag -f lumue/getdown:master-SNAPSHOT lumue/getdown:latest
+  - docker push lumue/getdown:master-SNAPSHOT
   - docker push lumue/getdown:latest
   
